[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/circuit.gd" type="Script" id=1]
[ext_resource path="res://sprite/road.png" type="Texture" id=2]

[node name="circuit" type="Node2D" groups=[
"circuit",
]]
script = ExtResource( 1 )

[node name="road_line" type="Line2D" parent="."]
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 1

[node name="limit_interior" type="Area2D" parent="road_line" groups=[
"interior",
]]
visible = false
collision_layer = 4
collision_mask = 2147483656

[node name="col" type="CollisionPolygon2D" parent="road_line/limit_interior"]
visible = false

[node name="limit_exterior" type="Area2D" parent="road_line" groups=[
"exterior",
]]
visible = false
collision_layer = 524290
collision_mask = 8

[node name="col" type="CollisionPolygon2D" parent="road_line/limit_exterior"]
visible = false

[node name="buzers" type="Node2D" parent="."]

[node name="slow_turns" type="Node2D" parent="."]
visible = false

[node name="straigth_lines" type="Node2D" parent="."]
visible = false

[node name="ligthly_rain" type="CPUParticles2D" parent="."]
emitting = false
amount = 2000
emission_shape = 2
emission_rect_extents = Vector2( 4000, 4000 )
gravity = Vector2( 0, 0 )
scale_amount = 7.0
scale_amount_random = 1.0
color = Color( 0.607843, 0.964706, 1, 0.25098 )

[node name="rain" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
emitting = false
amount = 5000
emission_shape = 2
emission_rect_extents = Vector2( 4000, 4000 )
gravity = Vector2( 0, 0 )
scale_amount = 7.0
scale_amount_random = 1.0
color = Color( 0.607843, 0.964706, 1, 0.25098 )

[node name="tw_weather" type="Tween" parent="."]

[node name="refresh" type="Timer" parent="."]

[connection signal="body_entered" from="road_line/limit_interior" to="." method="_on_limit_interior_body_entered"]
[connection signal="body_exited" from="road_line/limit_interior" to="." method="_on_limit_interior_body_exited"]
[connection signal="body_entered" from="road_line/limit_exterior" to="." method="_on_limit_exterior_body_entered"]
[connection signal="body_exited" from="road_line/limit_exterior" to="." method="_on_limit_exterior_body_exited"]
[connection signal="timeout" from="refresh" to="." method="_on_refresh_timeout"]
